crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_cucumber_shell.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/runner_shells/cucumber_shell.rs
tests:
  - identity:
      file_path: tests/fixtures/runner_shells/cucumber_shell.rs
      qualified_name: it
      span:
        start_line: 11
        end_line: 14
        start_column: 1
        end_column: 2
    attributes:
      - name: test
        raw: ~
    assertions: []
    body_line_count: 2
    implicit_assertion_sources:
      - cucumber
    opt_outs: []
    behavioral_facts: []
diagnostics: []
