crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_error_recovery_malformed_attribute.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: err
---
Syntax {
    message: "cannot parse string into token stream",
    span: Some(
        Span {
            start_line: 10,
            end_line: 10,
            start_column: 15,
            end_column: 15,
        },
    ),
}
