crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_error_recovery_unclosed_brace.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: err
---
Syntax {
    message: "cannot parse string into token stream",
    span: Some(
        Span {
            start_line: 11,
            end_line: 11,
            start_column: 20,
            end_column: 20,
        },
    ),
}
