crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_expect_err_chain.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/behavioral_facts/expect_err_chain.rs
tests:
  - identity:
      file_path: tests/fixtures/behavioral_facts/expect_err_chain.rs
      qualified_name: it
      span:
        start_line: 13
        end_line: 17
        start_column: 1
        end_column: 1
    attributes:
      - name: test
        raw: ~
    assertions: []
    body_line_count: 3
    implicit_assertion_sources: []
    opt_outs: []
    behavioral_facts:
      - result_asserted
diagnostics: []
