crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_pretty_assertions_shell.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/runner_shells/pretty_assertions_shell.rs
tests:
  - identity:
      file_path: tests/fixtures/runner_shells/pretty_assertions_shell.rs
      qualified_name: it
      span:
        start_line: 12
        end_line: 15
        start_column: 1
        end_column: 1
    attributes:
      - name: test
        raw: ~
    assertions:
      - name: assert_eq
        raw_args: "1 , 1"
        span:
          start_line: 14
          end_line: 14
          start_column: 5
          end_column: 39
        arguments_identical: true
    body_line_count: 2
    implicit_assertion_sources:
      - pretty_assertions
    opt_outs: []
    behavioral_facts: []
diagnostics: []
