crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_proptest_macro_suffix.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/runner_shells/proptest_macro_suffix.rs
tests:
  - identity:
      file_path: tests/fixtures/runner_shells/proptest_macro_suffix.rs
      qualified_name: it
      span:
        start_line: 9
        end_line: 12
        start_column: 1
        end_column: 2
    attributes:
      - name: test
        raw: ~
    assertions: []
    body_line_count: 2
    implicit_assertion_sources:
      - proptest
    opt_outs: []
    behavioral_facts: []
diagnostics: []
